RESOLVED FIXED184075
REGRESSION(r229998): WebDriver: MiniBrowser is crashing in a lot of tests after r229998
https://bugs.webkit.org/show_bug.cgi?id=184075
Summary REGRESSION(r229998): WebDriver: MiniBrowser is crashing in a lot of tests aft...
Carlos Garcia Campos
Reported 2018-03-28 03:01:42 PDT
This caused a lot of failures in the bots. #0 0x00007f44b12cf225 in WebKit::WebPageProxy::getWindowFrameWithCallback(WTF::Function<void (WebCore::FloatRect)>&&) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 [Current thread is 1 (Thread 0x7f44b3a946c0 (LWP 46286))] (gdb) bt #0 0x00007f44b12cf225 in WebKit::WebPageProxy::getWindowFrameWithCallback(WTF::Function<void (WebCore::FloatRect)>&&) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #1 0x00007f44b134dd0b in WTF::Function<void ()>::CallableWrapper<WebKit::WebAutomationSession::setWindowFrameOfBrowsingContext(WTF::String const&, WTF::JSONImpl::Object const*, WTF::JSONImpl::Object const*, WTF::Ref<Inspector::AutomationBackendDispatcherHandler::SetWindowFrameOfBrowsingContextCallback, WTF::DumbPtrTraits<Inspector::AutomationBackendDispatcherHandler::SetWindowFrameOfBrowsingContextCallback> >&&)::{lambda()#1}::operator()()::{lambda()#1}>::call() () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #2 0x00007f44b134c748 in WebKit::WebAutomationSession::restoreWindowForPage(WebKit::WebPageProxy&, WTF::CompletionHandler<void ()>&&) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #3 0x00007f44b134de7f in WTF::Function<void ()>::CallableWrapper<WebKit::WebAutomationSession::setWindowFrameOfBrowsingContext(WTF::String const&, WTF::JSONImpl::Object const*, WTF::JSONImpl::Object const*, WTF::Ref<Inspector::AutomationBackendDispatcherHandler::SetWindowFrameOfBrowsingContextCallback, WTF::DumbPtrTraits<Inspector::AutomationBackendDispatcherHandler::SetWindowFrameOfBrowsingContextCallback> >&&)::{lambda()#1}>::call() () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #4 0x00007f44b134c8cc in WebKit::WebAutomationSession::exitFullscreenWindowForPage(WebKit::WebPageProxy&, WTF::CompletionHandler<void ()>&&) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #5 0x00007f44b134fcca in WebKit::WebAutomationSession::setWindowFrameOfBrowsingContext(WTF::String const&, WTF::JSONImpl::Object const*, WTF::JSONImpl::Object const*, WTF::Ref<Inspector::AutomationBackendDispatcherHandler::SetWindowFrameOfBrowsingContextCallback, WTF::DumbPtrTraits<Inspector::AutomationBackendDispatcherHandler::SetWindowFrameOfBrowsingContextCallback> >&&) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #6 0x00007f44b148b9f5 in Inspector::AutomationBackendDispatcher::setWindowFrameOfBrowsingContext(long, WTF::RefPtr<WTF::JSONImpl::Object, WTF::DumbPtrTraits<WTF::JSONImpl::Object> >&&) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #7 0x00007f44b148d66b in Inspector::AutomationBackendDispatcher::dispatch(long, WTF::String const&, WTF::Ref<WTF::JSONImpl::Object, WTF::DumbPtrTraits<WTF::JSONImpl::Object> >&&) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #8 0x00007f44abcd67cf in Inspector::BackendDispatcher::dispatch(WTF::String const&) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #9 0x00007f44abd12688 in Inspector::RemoteConnectionToTarget::sendMessageToTarget(WTF::String const&) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #10 0x00007f44abd13923 in Inspector::RemoteInspector::sendMessageToTarget(unsigned int, char const*) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #11 0x00007f44abd160a2 in Inspector::RemoteInspectorServer::{lambda(_GDBusConnection*, char const*, char const*, char const*, char const*, _GVariant*, _GDBusMethodInvocation*, void*)#2}::_FUN(_GDBusConnection*, char const*, char const*, char const*, char const*, _GVariant*, _GDBusMethodInvocation*, void*) () from /home/igalia/cgarcia/WebKit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 #12 0x00007f44ae08c10c in call_in_idle_cb () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/gio/gdbusconnection.c:4851 #13 0x00007f44adab45da in g_main_dispatch () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmain.c:3148 #14 g_main_context_dispatch () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmain.c:3813 #15 0x00007f44adab4968 in g_main_context_iterate () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmain.c:3886 #16 0x00007f44adab4c82 in g_main_loop_run () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmain.c:4082 #17 0x00007f44af649aa5 in gtk_main () at /home/igalia/cgarcia/WebKit/WebKitBuild/DependenciesGTK/Source/gtk+-3.22.11/gtk/gtkmain.c:1312 #18 0x000055d43d45423e in main ()
Attachments
Patch (2.49 KB, patch)
2018-03-28 03:05 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2018-03-28 03:05:19 PDT
Carlos Garcia Campos
Comment 2 2018-03-28 03:40:32 PDT
Radar WebKit Bug Importer
Comment 3 2018-03-28 03:41:24 PDT
Note You need to log in before you can comment on or make changes to this bug.