REGRESSION(r229998): WebDriver: MiniBrowser is crashing in a lot of tests after r229998 https://bugs.webkit.org/show_bug.cgi?id=184075

Reviewed by Žan Doberšek.

This is because we are using a value after it has been moved.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::setWindowFrameOfBrowsingContext): Save a reference to page in a local variable
before using it when it's also going to be moved in the lambda capture.

Canonical link: https://commits.webkit.org/199659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230027 268f45cc-cd09-0410-ab3c-d52691b4dbfc